# Expenses_Website

./: db.sqlite3  manage.py  pyproject.toml
Expenses_Website/: asgi.py  settings.py  urls.py  wsgi.py
Expenses_Website/static/charts/css/: chart.css
Expenses_Website/static/expenses/css/: dashboard.css
Expenses_Website/static/expenses/css/auth_css/: register.css
Expenses_Website/static/expenses/js/: main.js
charts/: admin.py  models.py  urls.py  views.py
charts/migrations/: 0001_initial.py
expenses/: urls.py  views.py
templates/: base.html
templates/charts/: chart.html
templates/expenses/: add_expense.html  index.html
templates/partials/: _sidebar.html
