[tool.poetry]
name = "expenses-website"
version = "0.1.0"
description = ""
authors = ["DenisBichuk <denisbichuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"
django-allauth = "^0.63.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
